lib/bait/tests/inout_error/parser/bad_interface.out
lib/bait/tests/inout_error/parser/bad_interface.in.bt:2:16 error: unexpected string, expecting name
