lib/bait/tests/inout_error/parser/bad_interface.in.bt
interface #JS.Foo {
	not_expected ""
}
